Enhance security and bug fixes

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webmvc</artifactId>
+<!--            -->
         </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
@@ -69,6 +70,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity6</artifactId>
+<!--            usages -->
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
