--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name=BookStore
 # MySql Database
 spring.datasource.url=jdbc:mysql://localhost:3306/bookstore?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=P@ger123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
