--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,35 @@
         <artifactId>poi-ooxml</artifactId>
         <version>5.2.5</version>
     </dependency>
+        <!-- JJWT API -->
+<!--        <dependency>-->
+<!--            <groupId>io.jsonwebtoken</groupId>-->
+<!--            <artifactId>jjwt-api</artifactId>-->
+<!--            <version>0.11.5</version> &lt;!&ndash; Check Maven Central for the latest version &ndash;&gt;-->
+<!--        </dependency>-->
 
+        <!-- JJWT Implementation (Impl) -->
+<!--        <dependency>-->
+<!--            <groupId>io.jsonwebtoken</groupId>-->
+<!--            <artifactId>jjwt-impl</artifactId>-->
+<!--            <version>0.11.5</version> &lt;!&ndash; Use the same version as API &ndash;&gt;-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
+
+        <!-- JJWT Jackson for JSON processing -->
+<!--        <dependency>-->
+<!--            <groupId>io.jsonwebtoken</groupId>-->
+<!--            <artifactId>jjwt-jackson</artifactId>-->
+<!--            <version>0.11.5</version> &lt;!&ndash; Use the same version as API &ndash;&gt;-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.42</version> <!-- Use the latest stable version -->
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -129,7 +157,11 @@
                 <version>3.9.0</version> <!-- Use a recent version -->
                 <configuration>
                     <annotationProcessorPaths>
-
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.42</version> <!-- Match the dependency version -->
+                        </path>
                         <path>
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
