--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,14 @@
 spring.application.name=BookStore
 
-# H2 Console
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-
-# MySql Database
 spring.datasource.url=jdbc:mysql://localhost:3306/bookstore?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=P@ger123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-
-# Database Configuration (H2 In-Memory)
-#spring.datasource.url=jdbc:h2:mem:userdb
-# FIX: Removed the trailing semicolon
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-
-# JPA/Hibernate properties
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+app.jwt.secret=ReplaceThisWithAStrongSecretKeyAtLeast64CharsLong_ChangeMe
+app.jwt.expiration-ms=3600000
+
+app.cors.allowed-origin=http://localhost:4200
